@@ -1,5 +1,10 @@
 2004-10-21  Benoît Dejean  <tazforever@dlfp.org>
 
+	* src/procactions.c: (renice_single_process),
+	(kill_single_process): Trim whitespaces. Closes #125380.
+
+2004-10-21  Benoît Dejean  <tazforever@dlfp.org>
+
 	* AUTHORS:
 	* src/callbacks.c: (cb_about_activate): Hello, i'm the new maintainer :)
 	
